# fsperf

./: .gitignore  README.md  alembic.ini  disabled-tests  fsperf  fsperf-clean-results  fsperf-compare  fsperf-generate-graph  fsperf-generate-results  fsperf-sqlite.sql  local-cfg-example  manage.py  setup
alembic/: env.py
alembic/versions/: f2b6313d4618_initial_create.py
frag_tests/: buffered-append-vs-fallocate.fio  buffered-append-vs-fallocate.py  correlated-lifetimes.fio  correlated-lifetimes.py  four-sizes.fio  four-sizes.py  funny-sizes-high.fio  funny-sizes-high.py  funny-sizes-low.fio  funny-sizes-low.py  mixed-lifetimes.fio  mixed-lifetimes.py
fsperf-db/: migrate.cfg
fsperf-db/versions/: 001_Add_hostname,purpose_columns_to_runs.py  001_Add_schema.py  002_lat_means.py  003_fragmentation.py  004_latency_trace.py  005_btrfs_commit_stats.py  006_mount_timing.py  007_io_stats.py
src/: FioCompare.py  FioResultDecoder.py  PerfTest.py  ResultData.py  clean-results.py  compare.py  fsperf.py  generate-graph.py  generate-results-page.py  generate-schema.py  index.jinja  nullblk.py  test.jinja  utils.py
src/frag/: .gitignore  Cargo.toml  bg-dump.btrd  bg-dump.jinja  cleanup.sh
src/frag/src/: main.rs
src/frag/tests/: buffered-append-vs-fallocate.py
tests/: 500kemptyfiles.fio  btrfsbgscalability.py  buffered-append-sync.py  buffered-randwrite-16g.fio  buffered-randwrite-16g.py  dbench-60.py  dio-4kbs-16threads.fio  dio-4kbs-16threads.py  dio-randread.py  empty-files-500k.py  randwrite-2xram.py  small-files-100k.py  untar-firefox.py
www/: style.css
