[package]
name = "btrfs-frag-view"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
fast_hilbert = "1.0.0"
clap = { version = "3.2.16", features = ["derive"] }
statrs = "0.15.0"
serde_json = "1.0"
